# azure-factory-demo

./: .coverage  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENT-RATIONALIZATION-SUMMARY.md  AGENTS.md  BACKEND_API_REFERENCE.md  CLAUDE.md  CODEBASE_GUIDE.md  CODEBASE_OVERVIEW.md  CONTEXT-RESUME.md  DEPLOYMENT.md  MERGE-STRATEGY.md  PHASE3_PLANNING_GUIDE.md  PHASE4-STATUS.md  PR11_IMPLEMENTATION.md  PR12-COMPLETION.md  PR13_SUMMARY.md  PR9_SUMMARY.md  README.md  current-sprint.md  docker-compose.yml  implementation-plan-fixes.md  implementation-plan-prs.md  implementation-plan.md  pyproject.toml  regenerate_data.py  requirements.txt  verify_pr13.py
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
docs/: AZURE_AI_FOUNDRY_SETUP.md  AZURE_KEYVAULT_SETUP.md  CHAT_FEATURE_INDEX.md  DEMO-MEMORY.md  DEPLOYMENT.md  MODELS_INDEX.md  MODEL_REFERENCE.md  NEXTSESSION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PR21_SUMMARY.md  PR24B-AUTHENTICATION-SETUP.md  PYDANTIC_MODELS_ANALYSIS.md  ROADMAP.md  SECURITY-OPERATIONS.md  SECURITY_STATUS.md  between-sessions.txt  data_store_expansion_analysis.md  demo-script.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
infra/: backend.bicep  frontend.bicep  main.bicep  main.bicepparam  shared.bicep  staticwebapp.bicep
scripts/: build-local.sh  deploy.sh  upload_secrets_to_keyvault.sh
shared/: __init__.py  blob_storage.py  chat_service.py  config.py  data.py  (+4 more)
(+81 files in other folders)
